@@ -1,7 +1,10 @@
 package com.voterra;
-
 import com.voterra.DTOs.ReportedPostDTO;
 import com.voterra.entities.*;
+import com.voterra.entities.FeedFactory;
+import com.voterra.entities.Poll;
+import com.voterra.entities.Post;
+import com.voterra.entities.User;
 import com.voterra.exceptions.PostNotFoundException;
 import com.voterra.repos.PostRepository;
 import com.voterra.repos.ReportedPostRepository;
@@ -53,36 +56,116 @@ class PostServiceTest {
         MockitoAnnotations.openMocks(this);
     }
 
+//    @Test
+//    void testGetPaginatedPosts() {
+//        when(securityContext.getAuthentication()).thenReturn(authentication);
+//        SecurityContextHolder.setContext(securityContext);
+//        String currentUserEmail = "testuser@example.com";
+//        when(authentication.getName()).thenReturn(currentUserEmail);
+//
+//        Post userPost = new Post("testuser@example.com","testuser" ,"User Post", FeedFactory.category.OTHER, Post.privacy.PUBLIC, null, new Date());
+//        Post friendPost = new Post("friend@example.com", "testuser" ,"Friend Post", FeedFactory.category.OTHER, Post.privacy.FRIENDS, null, new Date());
+//        Post nonFriendPost = new Post("nonfriend@example.com", "testuser" ,"Non-Friend Post", FeedFactory.category.OTHER, Post.privacy.PUBLIC, null, new Date());
+//
+//        when(postRepository.findByUserEmail(eq(currentUserEmail), any(PageRequest.class)))
+//                .thenReturn(Collections.singletonList(userPost));
+//
+//        when(userService.getFriends(currentUserEmail))
+//                .thenReturn(Collections.singletonList("friend@example.com"));
+//
+//        when(postRepository.findByUserEmailInWithSpecificPrivacy(eq(List.of("friend@example.com")), any(PageRequest.class)))
+//                .thenReturn(Collections.singletonList(friendPost));
+//
+//        when(postRepository.findByUserEmailNotInWithPublicPrivacy(eq(Arrays.asList("friend@example.com", "testuser@example.com")), any(PageRequest.class)))
+//                .thenReturn(Collections.singletonList(nonFriendPost));
+//
+//        List<Post> result = postService.getPaginatedPosts("all", 0);
+//
+//        assertNotNull(result);
+//        assertEquals(3, result.size());
+//        assertTrue(result.contains(userPost));
+//        assertTrue(result.contains(friendPost));
+//        assertTrue(result.contains(nonFriendPost));
+//    }
+
     @Test
-    void testGetPaginatedPosts() {
+    void testGetPaginatedPosts_AllCategory() {
         when(securityContext.getAuthentication()).thenReturn(authentication);
         SecurityContextHolder.setContext(securityContext);
-        String currentUserEmail = "testuser@example.com";
+        String currentUserEmail = "test@example.com";
         when(authentication.getName()).thenReturn(currentUserEmail);
 
-        Post userPost = new Post("testuser@example.com","testuser" ,"User Post", null, Post.privacy.PUBLIC, null, new Date());
-        Post friendPost = new Post("friend@example.com", "testuser" ,"Friend Post", null, Post.privacy.FRIENDS, null, new Date());
-        Post nonFriendPost = new Post("nonfriend@example.com", "testuser" ,"Non-Friend Post", null, Post.privacy.PUBLIC, null, new Date());
 
-        when(postRepository.findByUserEmail(eq(currentUserEmail), any(PageRequest.class)))
-                .thenReturn(Collections.singletonList(userPost));
+        String email = "test@example.com";
+        int page = 0;
+        String category = "all";
+        PageRequest pageable = PageRequest.of(page, 5, Sort.by(Sort.Direction.DESC, "publishedDate"));
 
-        when(userService.getFriends(currentUserEmail))
-                .thenReturn(Collections.singletonList("friend@example.com"));
+        List<Post> userPosts = List.of(
+                new Post(email, email, "User Name", FeedFactory.category.OTHER, FeedFactory.privacy.PUBLIC, null, new Date()),
+                new Post(email, email, "User Name", FeedFactory.category.OTHER, FeedFactory.privacy.PUBLIC, null, new Date())
+        );
+        when(postRepository.findByUserEmail(email, pageable)).thenReturn(userPosts);
 
-        when(postRepository.findByUserEmailInWithSpecificPrivacy(eq(List.of("friend@example.com")), any(PageRequest.class)))
-                .thenReturn(Collections.singletonList(friendPost));
+        List<String> friends = List.of("friend1@example.com", "friend2@example.com");
+        when(userService.getFriends(email)).thenReturn(friends);
 
-        when(postRepository.findByUserEmailNotInWithPublicPrivacy(eq(Arrays.asList("friend@example.com", "testuser@example.com")), any(PageRequest.class)))
-                .thenReturn(Collections.singletonList(nonFriendPost));
+        List<Post> friendPosts = List.of(
+                new Post("friend1@example.com", "friend1@example.com", "Friend One", FeedFactory.category.OTHER, FeedFactory.privacy.PUBLIC, null, new Date()),
+                new Post("friend2@example.com", "friend2@example.com", "Friend Two", FeedFactory.category.OTHER, FeedFactory.privacy.PUBLIC, null, new Date())
+        );
+        when(postRepository.findByUserEmailInWithSpecificPrivacy(friends, pageable)).thenReturn(friendPosts);
 
-        List<Post> result = postService.getPaginatedPosts(0);
+        List<Post> result = postService.getPaginatedPosts(category, page);
 
-        assertNotNull(result);
-        assertEquals(3, result.size());
-        assertTrue(result.contains(userPost));
-        assertTrue(result.contains(friendPost));
-        assertTrue(result.contains(nonFriendPost));
+        List<Post> expected = new ArrayList<>();
+        expected.addAll(userPosts);
+        expected.addAll(friendPosts);
+        expected.sort((post1, post2) -> post2.getPublishedDate().compareTo(post1.getPublishedDate()));
+
+        assertEquals(expected.size(), result.size());
+        assertEquals(expected, result);
+    }
+
+    @Test
+    void testGetPaginatedPosts_SpecificCategory() {
+        // Setup SecurityContext
+        when(securityContext.getAuthentication()).thenReturn(authentication);
+        SecurityContextHolder.setContext(securityContext);
+        String currentUserEmail = "test@example.com";
+        when(authentication.getName()).thenReturn(currentUserEmail);
+
+        String email = "test@example.com";
+        int page = 0;
+        FeedFactory.category category = FeedFactory.category.OTHER;
+        PageRequest pageable = PageRequest.of(page, 5, Sort.by(Sort.Direction.DESC, "publishedDate"));
+
+        List<Post> userPosts = List.of(
+                new Post(email, email, "User Post 1", FeedFactory.category.OTHER, FeedFactory.privacy.PUBLIC, null, new Date(1670000000000L)),
+                new Post(email, email, "User Post 2", FeedFactory.category.OTHER, FeedFactory.privacy.PUBLIC, null, new Date(1670000005000L))
+        );
+        when(postRepository.findByUserEmailAndCategory(email, String.valueOf(FeedFactory.category.OTHER), pageable)).thenReturn(userPosts);
+
+        List<String> friends = List.of("friend1@example.com", "friend2@example.com");
+        when(userService.getFriends(email)).thenReturn(friends);
+
+        List<Post> friendPosts = List.of(
+                new Post("friend1@example.com", "friend1@example.com", "Friend Post 1", FeedFactory.category.OTHER, FeedFactory.privacy.FRIENDS, null, new Date(1670000010000L)),
+                new Post("friend2@example.com", "friend2@example.com", "Friend Post 2", FeedFactory.category.OTHER, FeedFactory.privacy.FRIENDS, null, new Date(1670000015000L))
+        );
+        when(postRepository.findByUserEmailInWithSpecificPrivacyAndCategory(friends, String.valueOf(FeedFactory.category.OTHER), pageable))
+                .thenReturn(friendPosts);
+
+        List<Post> result = postService.getPaginatedPosts(String.valueOf(category), page);
+
+
+        List<Post> expected = new ArrayList<>();
+        expected.addAll(userPosts);
+        expected.addAll(friendPosts);
+        expected.sort((post1, post2) -> post2.getPublishedDate().compareTo(post1.getPublishedDate()));
+
+        assertEquals(expected.size(), result.size(), "Post count mismatch");
+        assertEquals(expected, result, "Posts do not match");
     }
 
     @Test
@@ -456,4 +539,43 @@ class PostServiceTest {
     }
 
 
+    @Test
+    void testSearchPosts() {
+        // Arrange
+        String searchContent = "example";
+        int page = 0;
+        int size = 5;
+        PageRequest pageable = PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "publishedDate"));
+
+        String currentUserEmail = "user@example.com";
+        when(securityContext.getAuthentication()).thenReturn(authentication);
+        SecurityContextHolder.setContext(securityContext);
+        when(authentication.getName()).thenReturn(currentUserEmail);
+
+        List<String> friends = List.of("friend1@example.com", "friend2@example.com");
+        when(userService.getFriends(currentUserEmail)).thenReturn(friends);
+
+        List<Post> matchedPosts = List.of(
+                new Post( "user@example.com", "User One", "This is an example post.",
+                        FeedFactory.category.OTHER, FeedFactory.privacy.PRIVATE, null, new Date()),
+                new Post("friend1@example.com", "Friend One", "Another example post.",
+                        FeedFactory.category.OTHER, FeedFactory.privacy.FRIENDS, null, new Date()),
+                new Post("public@example.com", "Public User", "Public example post.",
+                        FeedFactory.category.OTHER, FeedFactory.privacy.PUBLIC, null, new Date()),
+                new Post("other@example.com", "Other User", "Another private post.",
+                        FeedFactory.category.OTHER, FeedFactory.privacy.PRIVATE, null, new Date())
+        );
+        when(postRepository.findByPostContentContaining(searchContent, pageable)).thenReturn(matchedPosts);
+
+        // Act
+        List<Post> result = postService.searchPosts(searchContent, page);
+
+        // Assert
+        assertNotNull(result);
+        assertEquals(3, result.size()); // Only 3 posts should be returned (PUBLIC, FRIENDS with matching user, and the user's own post)
+        assertTrue(result.stream().anyMatch(post -> post.getUserEmail().equals("user@example.com")));
+        assertTrue(result.stream().anyMatch(post -> post.getUserEmail().equals("friend1@example.com")));
+        assertTrue(result.stream().anyMatch(post -> post.getUserEmail().equals("public@example.com")));
+    }
 }
+
